crates/analyzer/tests/snapshots/errors__call_event_with_wrong_types.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: missing argument label
  ┌─ compile_errors/call_event_with_wrong_types.fe:7:22
  │
7 │         emit MyEvent("foo bar", 1000)
  │                      ^ add `val_1=` here
  │
  = Note: this label is optional if the argument is a variable named `val_1`.

error: missing argument label
  ┌─ compile_errors/call_event_with_wrong_types.fe:7:33
  │
7 │         emit MyEvent("foo bar", 1000)
  │                                 ^ add `val_2=` here
  │
  = Note: this label is optional if the argument is a variable named `val_2`.

error: incorrect type for `MyEvent` argument `val_1`
  ┌─ compile_errors/call_event_with_wrong_types.fe:7:22
  │
7 │         emit MyEvent("foo bar", 1000)
  │                      ^^^^^^^^^ this has type `String<7>`; expected type `String<5>`

error: literal out of range for `u8`
  ┌─ compile_errors/call_event_with_wrong_types.fe:7:33
  │
7 │         emit MyEvent("foo bar", 1000)
  │                                 ^^^^ does not fit into type `u8`


